[package]
name = "wonder13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
    "bevy_winit",
    "bevy_ui",
    "png",
    "webgl2",
] }

# bevy = { version = "0.12.1", default-features = false, features = [
#     "bevy_winit",
#     "bevy_ui",
#     "png",
#     "webgl2",
# ] }
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
#     "bevy_winit",
#     "bevy_ui",
#     "png",
#     "webgl2",
# ] }
# bevy_ecs = "=0.12.0"
rand = "0.8"
ulam = "0.5.2"
wasm-bindgen = "0.2"
async-channel = "2.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
all-colors = "0.0.5"
regex = "1.10.2"
qrcode-generator = "4.1"
image = "0.24"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Document",
    "HtmlCanvasElement",
    "Clipboard",
    "Window",
    "Navigator",
    "Permissions",
]


[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
