[package]
name = "wonder13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
#     "bevy_winit",
#     "bevy_ui",
#     "png",
#     "webgl2",
# ] }

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "3a1b9b98e47b1cbd81a8efc4d207355bc6a10371" }
# dd4d07dc9cc3e22210ed43949c5cc08f18b4e707 good after this the background goes black and flashes https://github.com/bevyengine/bevy/issues/11613

# bevy = { version = "0.12.1", default-features = false, features = [
#     "bevy_winit",
#     "bevy_ui",
#     "png",
#     "webgl2",
# ] }
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
#     "bevy_winit",
#     "bevy_ui",
#     "png",
#     "webgl2",
# ] }
# bevy_ecs = "=0.12.0"
rand = "0.8"
ulam = "0.5.2"
wasm-bindgen = "0.2"
async-channel = "2.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
all-colors = "0.0.6"
regex = "1.10.2"
qrcode-generator = "4.1"
image = "0.24"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3.64", features = [
    "CssStyleDeclaration",
    "Document",
    "HtmlCanvasElement",
    "Clipboard",
    "Window",
    "Navigator",
    "Permissions",
    'CustomEvent',
    'CustomEventInit',
    #"UserActivation",
] }

# [patch.crates-io]
# winit = { git = "https://github.com/rust-windowing/winit.git", rev = "798c205cef1aa0c92eb43bef537583ce5b1ad1fb" }
# web-sys = { git = "https://github.com/rustwasm/wasm-bindgen.git", branch = "main", features = [
#     "UserActivation",
# ] }


[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
